Assignment2_Zhao_Duo/tests/automated/tests/bad/BasicNumbersWithBadChars-9Chomped.calc
a .%0 b 1%. c 2%.3 d 3%4.5 e 6%.78 f 9%9.99 g 5% h 7%8